feat: atualizacao modal

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -37,10 +37,9 @@ a
     font-weight: bolder
     font-size: 18px
 
-li:hover
+a:hover
     background: variables.$body-bg-color
     opacity: 0.60
-    border-radius: 6px
 
 h1,h2, p
     margin: 30px
@@ -67,12 +66,12 @@ h1,h2, p
 .label
     text-align: center
     line-height: 1.2
-    font-size: 40px
+    font-size: 44px
     padding-top: 12px
 
 .text
     text-align: center
-    font-size: 17px
+    font-size: 20px
     font-weight: normal
 
 .text2
@@ -83,15 +82,16 @@ h1,h2, p
 
 .text3
     text-align: center
-    font-size: 16px
-    line-height: 1.2
+    font-size: 30px
+    line-height: 1.7
     font-weight: normal
-
+    margin-top: 70px
 .text4
     text-align: center
-    font-size: 25px
+    font-size: 30px
     font-weight: normal
     padding-top: 20px
+    margin-top: 70px
 
 .social-network
     color: variables.$text-color-secondary
@@ -109,4 +109,4 @@ h1,h2, p
 .footer
     font-family: variables.$font-stack
     color: variables.$font-stack
-    font-size: 12px
+    font-size: 10px
