feat: services and history modal

--- a/src/styles/Components/modal-button.sass
+++ b/src/styles/Components/modal-button.sass
@@ -3,6 +3,7 @@
     color: #E0E0D5
     font: 'Abril Fatface'
     font-weight: bolder
+    font-size: 16px
     border: none
     border-radius: 6px
     background: #DA291C
@@ -10,6 +11,7 @@
     width: 150px
     margin-top: 22px
     margin-bottom: 20px
+
     cursor: pointer
 
 .modal-btn:hover
