--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -66,37 +66,37 @@ h1,h2, p
 .label
     text-align: center
     line-height: 1.2
-    font-size: 44px
-    padding-top: 12px
+    font-size: 46px
+    padding-top: 15px
 
 .text
     text-align: center
-    font-size: 20px
+    font-size: 28px
     font-weight: normal
 
 .text2
     text-align: center
-    font-size: 20px
-    line-height: 1.3
+    font-size: 28px
+    line-height: 1.7
     font-weight: normal
 
 .text3
     text-align: center
-    font-size: 30px
+    font-size: 28px
     line-height: 1.7
     font-weight: normal
-    margin-top: 70px
+    margin-top: 60px
+
 .text4
     text-align: center
-    font-size: 30px
+    font-size: 28px
     font-weight: normal
-    padding-top: 20px
-    margin-top: 70px
+    margin-top: 60px
 
 .social-network
     color: variables.$text-color-secondary
     font-size: 65px
-    padding: 10px 10px
+    padding: 10px
     cursor: pointer
 
 .social-network
