feat: modal and text adjustment

--- a/src/styles/Components/modal-button.sass
+++ b/src/styles/Components/modal-button.sass
@@ -9,10 +9,8 @@
     background: #DA291C
     height: 40px
     width: 150px
-    margin-top: 22px
-    margin-bottom: 20px
-
     cursor: pointer
+    bottom: 0
 
 .modal-btn:hover
     background: #DA291C
@@ -28,7 +26,6 @@
     height: 22px
     width: 22px
     margin-top: 15px
-    margin-bottom: 20px
     cursor: pointer
 
 .modal-closed:hover
