--- a/src/styles/Components/textimg.sass
+++ b/src/styles/Components/textimg.sass
@@ -4,6 +4,7 @@
     &.reverse
         flex-direction: row-reverse
         background-color: #00000010
+        border-radius: 6px
 
     .text-img-text
         flex: 1
