--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -16,7 +16,7 @@ h1
     color: variables.$text-color
     font-family: variables.$font-stack
     font-weight: bold
-    padding-top: 50px
+    padding-top: 40px
 
 h2
     color: variables.$text-color
@@ -46,6 +46,7 @@ h1,h2, p
     margin: 30px
 
 .title
+    padding-top: 80px
     font-size: 60px
     font-weight: bolder
     text-align: center
@@ -53,14 +54,16 @@ h1,h2, p
 .subtitle
     font-family: variables.$font-stack-secundary
     color: variables.$text-color-secondary
-    font-size: 45px
+    font-size: 38px
     font-weight: bolder
 
 .undertitle
-    font-size: 20px
+    font-size: 22px
     color: variables.$text-color-secondary
+    line-height: .5
 
 .slogan
+    padding-top: 10px
     color: variables.$text-color
     font-size: 20px
 
@@ -76,6 +79,7 @@ h1,h2, p
     font: variables.$font-stack-secundary
     color: variables.$text-color-secondary
     font-style: italic
+    line-height: 1.4
 
 .text
     text-align: center
@@ -104,11 +108,12 @@ h1,h2, p
 .social-network
     color: variables.$text-color-secondary
     font-size: 65px
-    padding: 10px
+    padding-top: 30px
     cursor: pointer
 
 .social-network
     display: inline
+    padding-inline: 15px
 
 .social-network:hover
     background: variables.$body-bg-color
