--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -1,7 +1,7 @@
 @use './variables'
 
-@media screen and (min-width: 600px)
-    .full-width-img
+@media  (min-width: 768px)
+    .body
         margin: auto
         width: 90%
 
@@ -36,10 +36,9 @@ a
     color: variables.$text-color-secondary
     font-family: variables.$font-stack-secundary
     font-weight: bolder
-    font-size: 18px
+    font-size: 16px
 
 a:hover
-    background: variables.$body-bg-color
     opacity: 0.60
 
 h1,h2, p
@@ -102,22 +101,27 @@ h1,h2, p
 .text4
     text-align: center
     font-size: 28px
+    line-height: 1px
+    font-weight: normal
+
+.text5
+    text-align: center
+    font-size: 28px
+    line-height: 1.5
     font-weight: normal
     margin-top: 60px
 
-.social-network
-    color: variables.$text-color-secondary
-    font-size: 65px
-    padding-top: 30px
-    cursor: pointer
+.text7
+    text-align: center
+    font-size: 28px
+    font-weight: normal
+    margin-top: 60px
 
-.social-network
-    display: inline
-    padding-inline: 15px
-
-.social-network:hover
-    background: variables.$body-bg-color
-    opacity: 0.60
+.text8
+    text-align: center
+    font-size: 28px
+    font-weight: normal
+    margin-top: 60px
 
 .footer
     font-family: variables.$font-stack
