ajustes de dimensoes

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -1,9 +1,9 @@
 @use './variables'
 
-@media  (min-width: 768px)
+@media  (min-width: 568px)
     .body
         margin: auto
-        width: 90%
+        width: 80%
 
 body
     padding: 45px
@@ -45,8 +45,8 @@ h1,h2, p
     margin: 30px
 
 .title
-    padding-top: 80px
-    font-size: 60px
+    padding-top: 60px
+    font-size: 65px
     font-weight: bolder
     text-align: center
 
@@ -59,7 +59,7 @@ h1,h2, p
 .undertitle
     font-size: 22px
     color: variables.$text-color-secondary
-    line-height: .5
+    line-height: 0.8
 
 .slogan
     padding-top: 10px
@@ -101,7 +101,7 @@ h1,h2, p
 .text4
     text-align: center
     font-size: 28px
-    line-height: 1px
+    line-height: 0.7
     font-weight: normal
 
 .text5
