ultimos ajustes e media query

--- a/src/styles/Components/closemodal.sass
+++ b/src/styles/Components/closemodal.sass
@@ -35,3 +35,8 @@
     line-height: 1.7
     text-align: justify
     font-weight: normal
+
+@media (max-width: 768px)
+    .modal
+        margin: auto
+        width: 100%
