--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -20,10 +20,18 @@ p
     font-family: variables.$font-stack-secundary
     font-weight: bold
 
-li
+ul li 
+
     color: variables.$text-color
     display: inline-block
     padding: 2px 10px
+
+ol li
+
+    color: variables.$text-color-secondary
+    font-size: 28px
+    line-height: 1.3
+    list-style-type: none
 
 a
     text-decoration: none
@@ -66,54 +74,43 @@ h1,h2, p
     font-size: 46px
     padding-top: 15px
 
+.minha-historia
+    text-align: center
+    font-size: 28px
+    line-height: 1.3
+    font-weight: normal
+
+.meus-servicos
+    text-align: center
+    font-size: 28px
+    line-height: 1
+    font-weight: normal
+
+.nacionalidade-online
+    text-align: center
+    font-size: 28px
+    line-height: 1
+    font-weight: normal
+
+.vantagens
+    text-align: center
+    font-size: 30px
+    line-height: 1.2
+    font-weight: normal
+    margin-top: 60px
+
 .depoimentos
     text-align: center
-    font-size: 22px
+    font-size: 24px
     font: variables.$font-stack-secundary
     color: variables.$text-color-secondary
     font-style: italic
-    line-height: 1.4
-
-.text
-    text-align: center
-    font-size: 28px
-    font-weight: normal
-
-.text2
-    text-align: center
-    font-size: 28px
     line-height: 1.2
-    font-weight: normal
 
-.text3
+.contato
     text-align: center
-    font-size: 28px
-    line-height: 1.2
-    font-weight: normal
-    margin-top: 60px
-
-.text4
-    text-align: center
-    font-size: 28px
-    line-height: 0.7
-    font-weight: normal
-
-.text5
-    text-align: center
-    font-size: 28px
-    line-height: 1.5
-    font-weight: normal
-    margin-top: 60px
-
-.text7
-    text-align: center
-    font-size: 28px
-    font-weight: normal
-    margin-top: 60px
-
-.text8
-    text-align: center
-    font-size: 28px
+    font-size: 30px
+    line-height: 1.3
     font-weight: normal
     margin-top: 60px
 
